# timertests

./: .gitignore  CMakeLists.txt  change_interval.cpp  main.cpp  measure_interval.cpp
